cabal-version: 2.4
name:          copy-keys
version:       0.1.0.0
license:       Unlicense
maintainer:    stricklanj@ae.com
author:        Jonathan Strickland

library
    exposed-modules:    CopyKeys
    hs-source-dirs:     src
    default-language:   Haskell2010
    default-extensions:
        DataKinds FlexibleContexts GADTs LambdaCase PolyKinds RankNTypes
        ScopedTypeVariables TypeApplications TypeOperators TypeFamilies
        DeriveGeneric OverloadedStrings

    build-depends:
        base ^>=4.14.1.0,
        bytestring ^>=0.10.12.0,
        text ^>=1.2.4.1,
        shower ^>=0.2.0.2,
        polysemy ^>=1.3.0.0,
        aeson ^>=1.5.6.0,
        co-log-polysemy ^>=0.0.1.2,
        optparse-generic ^>=1.4.4,
        typed-process ^>=0.2.6.0,
        filemanip ^>=0.3.6.3,
        unordered-containers ^>=0.2.13.0

executable copy-keys
    main-is:          Main.hs
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:      -Wall -rtsopts -g -threaded
    build-depends:
        base ^>=4.14.1.0,
        copy-keys

test-suite tests
    type:             exitcode-stdio-1.0
    main-is:          Test.hs
    hs-source-dirs:   tests
    default-language: Haskell2010
    ghc-options:      -rtsopts -g -threaded -main-is Test
    build-depends:
        base ^>=4.14.1.0,
        bytestring ^>=0.10.12.0,
        shower ^>=0.2.0.2,
        tasty ^>=1.4.1,
        tasty-hunit ^>=0.10.0.3
